# vbimagetotext

./: pyproject.toml
vbimagetotext/: __main__.py  copyprompt.py  functions.py  geminivision.py  gptloop.py  gptvision.py  main.py  prompts.py  solution.py
