[tool.poetry]
name = "vbimagetotext"
version = "0.1.8"
description = "A cli tool to convert image to text using openai's GPT-Vision API and google's Gemini Vision API"
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
openai = "^1.19.0"
rich = "^13.7.1"
google-generativeai = "^0.5.0"
pillow = "^10.3.0"
pyperclip = "^1.8.2"
requests = "^2.31.0"


[tool.poetry.scripts]
vbimagetotext = "vbimagetotext.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
